# Assitent-IA

./: .env.example  .gitignore  Dockerfile  Dockerfile.admin  README.md  init-database.sh  main.py  pyproject.toml  requirements.txt  user_management_readme.md
admin/: app.py  config.py  demo_modern_design.html  requirements.txt
admin/models/: user.py  user_store.py
admin/static/css/: tailwind.css
admin/templates/: base.html  dashboard.html
admin/templates/agents/: create.html  edit.html  index.html  view.html
admin/templates/auth/: login.html  login_modern.html  profile.html
admin/templates/conversations/: archived.html  index.html  user.html  view.html  view_archived.html
admin/templates/knowledge/: index.html  (+1 more)
admin/views/: agents.py  auth.py  conversations.py  dashboard.py  knowledge.py  llm.py  tenants.py  tokens.py  user.py  webhooks.py  whatsapp.py
app/api/: deps.py  router.py
app/core/: config.py  rag_categories.py  redis.py  security.py
app/db/: init_db.py  session.py
app/schemas/: agent.py  archived_conversation.py  contact_control.py  llm.py  tenant.py  token.py  token_usage.py  user.py  webhook.py  whatsapp.py
app/services/: agent.py  config.py  coolify_notifications.py  llm.py  llm_old.py  mcp.py  memory.py  notification.py  orchestrator.py  rag.py  rag_faiss.py  token_counter.py  whatsapp.py
app/utils/: audio_helpers.py  email_templates.py  notification_helpers.py
help/: alteracao_data_base_assistant_db.sql  alteracoes_tokens.sql  assitant-api-vars.env  erros.txt  gerenciamento_provedores_llm.md  readme_agents.md  readme_memory.md
(+63 files in other folders)
